# humbert

./: .cz.toml  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md
.claude/skills/local-gates/: SKILL.md
.claude/skills/ship-pitch/: SKILL.md
.claude/skills/start-pitch/: SKILL.md
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/humbert/: __init__.py  chart.py  cli.py  config.py  engine.py  notebook.py  orchestrator.py  semantic.py  server.py  theme.py  webapi.py
apps/api/src/humbert/server/: __init__.py  deps.py  errors.py  sse.py  state.py  wire.py
apps/api/src/humbert/server/routes/: __init__.py  ask.py  cells.py  health.py  misc.py  theme.py
apps/api/tests/: test_chart.py  test_cli.py  test_config.py  test_connect.py  test_engine.py  test_notebook.py  test_orchestrator.py  test_orchestrator_integration.py  test_semantic.py  test_semantic_integration.py  test_server.py  test_smoke.py  test_theme.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/web/src/: App.tsx  config.ts  main.tsx  styles.css
apps/web/src/components/: CellView.tsx  ChartRenderer.tsx  CodeView.tsx  FeedbackControls.tsx  InputBar.tsx  NarrativeView.tsx  StageIndicator.tsx
apps/web/src/hooks/: useBranding.ts  useHealth.ts  useNotebook.ts  useTheme.ts
apps/web/src/locales/: en.json  index.ts  nl.json
apps/web/src/styles/: theme.css
apps/web/src/types/: api.ts  cell.ts
apps/web/src/utils/: api.ts  cssVar.ts  fetchWithRetry.ts  sse.ts
docs/: _context.md
docs/architecture/: 001-stack-decisions.md
docs/assets/: Humbert-Data-viz.html  Humbert-Design-System.html  Humbert-Icon.html  Humbert-Notebook.html
docs/planning/: Betting Table.md  In Cycle.md  _about.md
docs/planning/blocks/: 01-setup-and-bootstrap.md  02-notebook-and-orchestration.md  03-honest-uncertainty.md  04-telemetry.md  05-evaluation.md
docs/planning/pitches/: _template.md  project-bootstrap.md
docs/planning/pitches/shipped/: beautiful-defaults.md  cli.md  pack-scaffolding.md  project-bootstrap.md  semantic-layer-module.md  the-cell.md  two-call-orchestration.md
docs/product-design/: 001-problem-and-stakeholders.md  002-product-forms.md  003-design-pillars.md  004-semantic-layer.md  005-evaluation.md  006-honest-uncertainty.md  007-telemetry.md  008-information-manager.md  009-orchestration.md  010-design-language.md
docs/technical/: 001-information-manager-instructions.md  002-current-implementation.md
examples/cheese/: README.md  dbt_project.yml  profiles.yml
examples/cheese/macros/: generate_schema_name.sql
examples/cheese/models/marts/: dim_country.sql  dim_date.sql  dim_product.sql  fct_cheese_production.sql
examples/cheese/models/semantic/: cheese.yml
examples/cheese/scripts/: derive_seed.py
examples/cheese/seeds/: cheese_production.csv
(+4 files in other folders)
