[project]
name = "humbert"
version = "0.11.0"
description = "A light, local-first analytics notebook for the cultural and youth sector."
readme = "../../README.md"
requires-python = ">=3.13,<3.14"
authors = [{ name = "Luk Verhelst" }]
license = "Apache-2.0"
license-files = ["../../LICENSE"]
dependencies = []

[project.scripts]
humbert = "humbert.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/humbert"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
