[project]
name = "humbert"
version = "0.11.0"
description = "A light, local-first analytics notebook for the cultural and youth sector."
readme = "../../README.md"
requires-python = ">=3.13,<3.14"
authors = [{ name = "Luk Verhelst" }]
license = "Apache-2.0"
license-files = ["../../LICENSE"]
dependencies = [
    "typer>=0.15",
    "platformdirs>=4.3",
    "pydantic>=2.10",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    # The agent framework for the two-call orchestration loop. Slim + the
    # anthropic provider keeps the core light; other providers are extras of
    # pydantic-ai-slim. Confined behind the `orchestrator` seam.
    "pydantic-ai-slim[anthropic]>=0.0.40",
]

[project.optional-dependencies]
# The dbt + MetricFlow engine. Optional so the core stays light; the engine
# shells out to the `dbt`/`mf` binaries this installs (never imports them).
dbt = ["dbt-metricflow>=0.13,<0.14", "dbt-duckdb>=1.9"]

[project.scripts]
humbert = "humbert.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.3",
    "ruff>=0.8",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/humbert"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
# Typer's API intentionally puts Argument/Option calls in parameter defaults.
"src/humbert/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
